- fixed accordion - fixed contentBox alignment

--- a/style.css
+++ b/style.css
@@ -390,7 +390,7 @@ section#projects {
 .projects .content .box {
     box-sizing: border-box;
     width: 400px;
-    margin: 1rem;
+    /*margin: 1rem;*/
     border: 15px solid #fff;
     box-shadow: 0 5px 35px rgba(0, 0, 0, 0.08);
 }
@@ -415,18 +415,18 @@ section#projects {
 .accordion {
     width: 100%;
     margin-top: 10px;
+    padding: 0;
 }
 
 .accordion .contentBx {
     position: relative;
     height: auto;
-    margin: 10px;
+    border-bottom: 1px dotted orangered ;
 }
 
 .accordion .contentBx .label {
     position: relative;
     padding: 10px;
-    /*background: #2694af;*/
     background: #f7226a;
     color: #fff;
     cursor: pointer;
